added get backend by name
