# server/restAPI/types/backendData.go
@@ -1,0 +1,8 @@
+package types
+
+type BackendData struct {
+	Name    string `json:"backend_name"`
+	ID      string `json:"id"`
+	Pointer uint32 `json:"pointer"`
+	Plugin  string `json:"plugin"`
+}
